Team_QualquerToken/Estrutura_proposta/preparacao_zip/Team_QualquerToken_EfolioB/compilador_moc/src/antrl/MOCParser.py
# Generated from MOC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MOCParser ( Parser ):

    grammarFileName = "MOC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'double'", "'void'", "'main'", 
                     "'read'", "'readc'", "'reads'", "'write'", "'writec'", 
                     "'writev'", "'writes'", "'if'", "'else'", "'while'", 
                     "'for'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", 
                     "'<='", "'>'", "'>='", "'=='", "'!='", "'&&'", "'||'", 
                     "'!'", "'='", "','", "';'", "'['", "']'", "'{'", "'}'", 
                     "'('", "')'", "'return'" ]

    symbolicNames = [ "<INVALID>", "INT", "DOUBLE", "VOID", "MAIN", "READ", 
                      "READC", "READS", "WRITE", "WRITEC", "WRITEV", "WRITES", 
                      "IF", "ELSE", "WHILE", "FOR", "MAIS", "MENOS", "MULT", 
                      "DIV", "MODULO", "MENOR", "MENORIGUAL", "MAIOR", "MAIORIGUAL", 
                      "IGUAL", "DIFERENTE", "E_LOGICO", "OU_LOGICO", "NAO", 
                      "ATRIBUICAO", "VIRGULA", "PONTOVIRG", "ABRECOLCH", 
                      "FECHACOLCH", "ABRECHAVES", "FECHACHAVES", "ABREPAR", 
                      "FECHAPAR", "RETURN", "STRINGLITERAL", "COMENTARIO_BLOCK", 
                      "COMENTARIO_LINE", "NUM_REAL", "NUMERO", "IDENTIFICADOR", 
                      "ESPACO" ]

    RULE_programa = 0
    RULE_prototipos = 1
    RULE_corpo = 2
    RULE_unidade = 3
    RULE_prototipo = 4
    RULE_prototipoPrincipal = 5
    RULE_funcaoPrincipal = 6
    RULE_funcao = 7
    RULE_parametros = 8
    RULE_parametro = 9
    RULE_tipo = 10
    RULE_declaracao = 11
    RULE_listaVariaveis = 12
    RULE_variavel = 13
    RULE_blocoArray = 14
    RULE_listaValores = 15
    RULE_expressao = 16
    RULE_expressaoOr = 17
    RULE_expressaoAnd = 18
    RULE_expressaoEquality = 19
    RULE_expressaoAdd = 20
    RULE_expressaoMul = 21
    RULE_expressaoUnaria = 22
    RULE_castExpr = 23
    RULE_primary = 24
    RULE_primaryRest = 25
    RULE_argumentos = 26
    RULE_opRelacional = 27
    RULE_chamadaFuncao = 28
    RULE_chamadaReads = 29
    RULE_bloco = 30
    RULE_instrucoes = 31
    RULE_instrucao = 32
    RULE_instrucaoExpressao = 33
    RULE_instrucaoEmparelhada = 34
    RULE_instrucaoPorEmparelhar = 35
    RULE_outraInstrucao = 36
    RULE_instrucaoWhile = 37
    RULE_instrucaoFor = 38
    RULE_expressaoOuAtribuicao = 39
    RULE_instrucaoEscrita = 40
    RULE_instrucaoReturn = 41
    RULE_instrucaoAtribuicao = 42
    RULE_argumentoString = 43

    ruleNames =  [ "programa", "prototipos", "corpo", "unidade", "prototipo", 
                   "prototipoPrincipal", "funcaoPrincipal", "funcao", "parametros", 
                   "parametro", "tipo", "declaracao", "listaVariaveis", 
                   "variavel", "blocoArray", "listaValores", "expressao", 
                   "expressaoOr", "expressaoAnd", "expressaoEquality", "expressaoAdd", 
                   "expressaoMul", "expressaoUnaria", "castExpr", "primary", 
                   "primaryRest", "argumentos", "opRelacional", "chamadaFuncao", 
                   "chamadaReads", "bloco", "instrucoes", "instrucao", "instrucaoExpressao", 
                   "instrucaoEmparelhada", "instrucaoPorEmparelhar", "outraInstrucao", 
                   "instrucaoWhile", "instrucaoFor", "expressaoOuAtribuicao", 
                   "instrucaoEscrita", "instrucaoReturn", "instrucaoAtribuicao", 
                   "argumentoString" ]

    EOF = Token.EOF
    INT=1
    DOUBLE=2
    VOID=3
    MAIN=4
    READ=5
    READC=6
    READS=7
    WRITE=8
    WRITEC=9
    WRITEV=10
    WRITES=11
    IF=12
    ELSE=13
    WHILE=14
    FOR=15
    MAIS=16
    MENOS=17
    MULT=18
    DIV=19
    MODULO=20
    MENOR=21
    MENORIGUAL=22
    MAIOR=23
    MAIORIGUAL=24
    IGUAL=25
    DIFERENTE=26
    E_LOGICO=27
    OU_LOGICO=28
    NAO=29
    ATRIBUICAO=30
    VIRGULA=31
    PONTOVIRG=32
    ABRECOLCH=33
    FECHACOLCH=34
    ABRECHAVES=35
    FECHACHAVES=36
    ABREPAR=37
    FECHAPAR=38
    RETURN=39
    STRINGLITERAL=40
    COMENTARIO_BLOCK=41
    COMENTARIO_LINE=42
    NUM_REAL=43
    NUMERO=44
    IDENTIFICADOR=45
    ESPACO=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prototipos(self):
            return self.getTypedRuleContext(MOCParser.PrototiposContext,0)


        def corpo(self):
            return self.getTypedRuleContext(MOCParser.CorpoContext,0)


        def EOF(self):
            return self.getToken(MOCParser.EOF, 0)

        def getRuleIndex(self):
            return MOCParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = MOCParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.prototipos()
            self.state = 89
            self.corpo()
            self.state = 90
            self.match(MOCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrototiposContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prototipoPrincipal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCParser.PrototipoPrincipalContext)
            else:
                return self.getTypedRuleContext(MOCParser.PrototipoPrincipalContext,i)


        def prototipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCParser.PrototipoContext)
            else:
                return self.getTypedRuleContext(MOCParser.PrototipoContext,i)


        def getRuleIndex(self):
            return MOCParser.RULE_prototipos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrototipos" ):
                listener.enterPrototipos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrototipos" ):
                listener.exitPrototipos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrototipos" ):
                return visitor.visitPrototipos(self)
            else:
                return visitor.visitChildren(self)




    def prototipos(self):

        localctx = MOCParser.PrototiposContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prototipos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 94
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 92
                        self.prototipo()
                        pass

                    elif la_ == 2:
                        self.state = 93
                        self.prototipoPrincipal()
                        pass

             
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 99
            self.prototipoPrincipal()
            self.state = 104
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 102
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        self.state = 100
                        self.prototipo()
                        pass

                    elif la_ == 2:
                        self.state = 101
                        self.prototipoPrincipal()
                        pass

             
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CorpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcaoPrincipal(self):
            return self.getTypedRuleContext(MOCParser.FuncaoPrincipalContext,0)


        def unidade(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCParser.UnidadeContext)
            else:
                return self.getTypedRuleContext(MOCParser.UnidadeContext,i)


        def getRuleIndex(self):
            return MOCParser.RULE_corpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCorpo" ):
                listener.enterCorpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCorpo" ):
                listener.exitCorpo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCorpo" ):
                return visitor.visitCorpo(self)
            else:
                return visitor.visitChildren(self)




    def corpo(self):

        localctx = MOCParser.CorpoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_corpo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 107
                    self.unidade() 
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 113
            self.funcaoPrincipal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnidadeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcao(self):
            return self.getTypedRuleContext(MOCParser.FuncaoContext,0)


        def declaracao(self):
            return self.getTypedRuleContext(MOCParser.DeclaracaoContext,0)


        def getRuleIndex(self):
            return MOCParser.RULE_unidade

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnidade" ):
                listener.enterUnidade(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnidade" ):
                listener.exitUnidade(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnidade" ):
                return visitor.visitUnidade(self)
            else:
                return visitor.visitChildren(self)




    def unidade(self):

        localctx = MOCParser.UnidadeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_unidade)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.funcao()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.declaracao()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrototipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MOCParser.TipoContext,0)


        def IDENTIFICADOR(self):
            return self.getToken(MOCParser.IDENTIFICADOR, 0)

        def ABREPAR(self):
            return self.getToken(MOCParser.ABREPAR, 0)

        def FECHAPAR(self):
            return self.getToken(MOCParser.FECHAPAR, 0)

        def PONTOVIRG(self):
            return self.getToken(MOCParser.PONTOVIRG, 0)

        def parametros(self):
            return self.getTypedRuleContext(MOCParser.ParametrosContext,0)


        def getRuleIndex(self):
            return MOCParser.RULE_prototipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrototipo" ):
                listener.enterPrototipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrototipo" ):
                listener.exitPrototipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrototipo" ):
                return visitor.visitPrototipo(self)
            else:
                return visitor.visitChildren(self)




    def prototipo(self):

        localctx = MOCParser.PrototipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_prototipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.tipo()
            self.state = 120
            self.match(MOCParser.IDENTIFICADOR)
            self.state = 121
            self.match(MOCParser.ABREPAR)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 122
                self.parametros()


            self.state = 125
            self.match(MOCParser.FECHAPAR)
            self.state = 126
            self.match(MOCParser.PONTOVIRG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrototipoPrincipalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MOCParser.TipoContext,0)


        def MAIN(self):
            return self.getToken(MOCParser.MAIN, 0)

        def ABREPAR(self):
            return self.getToken(MOCParser.ABREPAR, 0)

        def FECHAPAR(self):
            return self.getToken(MOCParser.FECHAPAR, 0)

        def PONTOVIRG(self):
            return self.getToken(MOCParser.PONTOVIRG, 0)

        def parametros(self):
            return self.getTypedRuleContext(MOCParser.ParametrosContext,0)


        def getRuleIndex(self):
            return MOCParser.RULE_prototipoPrincipal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrototipoPrincipal" ):
                listener.enterPrototipoPrincipal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrototipoPrincipal" ):
                listener.exitPrototipoPrincipal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrototipoPrincipal" ):
                return visitor.visitPrototipoPrincipal(self)
            else:
                return visitor.visitChildren(self)




    def prototipoPrincipal(self):

        localctx = MOCParser.PrototipoPrincipalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_prototipoPrincipal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.tipo()
            self.state = 129
            self.match(MOCParser.MAIN)
            self.state = 130
            self.match(MOCParser.ABREPAR)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 131
                self.parametros()


            self.state = 134
            self.match(MOCParser.FECHAPAR)
            self.state = 135
            self.match(MOCParser.PONTOVIRG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncaoPrincipalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MOCParser.TipoContext,0)


        def MAIN(self):
            return self.getToken(MOCParser.MAIN, 0)

        def ABREPAR(self):
            return self.getToken(MOCParser.ABREPAR, 0)

        def FECHAPAR(self):
            return self.getToken(MOCParser.FECHAPAR, 0)

        def bloco(self):
            return self.getTypedRuleContext(MOCParser.BlocoContext,0)


        def parametros(self):
            return self.getTypedRuleContext(MOCParser.ParametrosContext,0)


        def getRuleIndex(self):
            return MOCParser.RULE_funcaoPrincipal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncaoPrincipal" ):
                listener.enterFuncaoPrincipal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncaoPrincipal" ):
                listener.exitFuncaoPrincipal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncaoPrincipal" ):
                return visitor.visitFuncaoPrincipal(self)
            else:
                return visitor.visitChildren(self)




    def funcaoPrincipal(self):
